# Halide

apps/: CMakeLists.txt
apps/hexagon_benchmarks/: CMakeLists.txt  Makefile  process.h
